guestbook/guestbook-ui-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook-ui
spec:
  hosts:
  - guestbook.k8s.xlh001.top
  gateways:
  - istio-system/xlh001-top-gw
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: guestbook-ui.default.svc.cluster.local
        port:
          number: 80
